axum-debug/tests/fail/too_many_extractors.rs
use axum_debug::debug_handler;

#[debug_handler]
async fn handler(
    e1: String,
    e2: String,
    e3: String,
    e4: String,
    e5: String,
    e6: String,
    e7: String,
    e8: String,
    e9: String,
    e10: String,
    e11: String,
    e12: String,
    e13: String,
    e14: String,
    e15: String,
    e16: String,
    e17: String,
) {}

fn main() {}
